fix error in files

--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -4,21 +4,38 @@ authelia:
 
   # Authelia configuration
   domain: auth.toolstowelsandfroods.com
-
-  # LDAP configuration
   authentication_backend:
+    password_reset:
+      disable: false
+    refresh_interval: 1m
     ldap:
-      host: lldap.toolstowelsandfroods.com
-      port: 389
-      bind_dn: cn=admin,dc=toolstowelsandfroods,dc=com
+      implementation: custom
+      url: ldap://lldap:3890
+      timeout: 5s
+      start_tls: false
       base_dn: dc=toolstowelsandfroods,dc=com
-      bind_password:
+      username_attribute: uid
+      additional_users_dn: ou=people
+      # To allow sign in both with username and email, one can use a filter like
+      # (&(|({username_attribute}={input})({mail_attribute}={input}))(objectClass=person))
+      users_filter: "(&({username_attribute}={input})(objectClass=person))"
+      # Set this to ou=groups, because all groups are stored in this ou
+      additional_groups_dn: ou=groups
+      # Only this filter is supported right now
+      groups_filter: "(member={dn})"
+      # The attribute holding the name of the group.
+      group_name_attribute: cn
+      # Email attribute
+      mail_attribute: mail
+      # The attribute holding the display name of the user. This will be used to greet an authenticated user.
+      display_name_attribute: displayName
+      # The username and password of the admin user.
+      # "admin" should be the admin username you set in the LLDAP configuration
+      user: uid=admin,ou=people,dc=example,dc=com
+      password:
         external:
           name: authelia-secrets
           key: bind_password
-      user_search_base: ou=users,dc=toolstowelsandfroods,dc=com
-      user_search_filter: "(uid={0})"
-      group_search_base: ou=groups,dc=toolstowelsandfroods,dc=com
 
   jwt_secret:
     external:
