--- a/authentication/authelia/Chart.yaml
+++ b/authentication/authelia/Chart.yaml
@@ -1,7 +1,7 @@
 apiVersion: v2
-name: hajimari
+name: authelia
 version: 0.0.0
 dependencies:
-  - name: hajimari
+  - name: authelia
     version: 0.8.57
     repository: https://charts.authelia.com
