--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -61,6 +61,8 @@ authelia:
         - secretName: authelia-tls-certificate
           hosts:
           - *host
+  redis:
+    host: redis
   resources:
     requests:
       cpu: 5m
