--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -62,7 +62,10 @@ authelia:
           hosts:
           - *host
   redis:
-    host: redis.redis.svc.cluster.local:6379
+    enabled: true
+    enabledSecret: false
+    host: redis.redis.svc.cluster.local
+    port: 6379
   resources:
     requests:
       cpu: 5m
