--- a/authentication/authelia/Chart.yaml
+++ b/authentication/authelia/Chart.yaml
@@ -2,6 +2,6 @@ apiVersion: v2
 name: authelia
 version: 0.0.0
 dependencies:
-  - name: authelia
-    version: 0.8.57
-    repository: https://charts.authelia.com
+  - name: app-template
+    version: 1.5.0
+    repository: https://bjw-s.github.io/helm-charts
