--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -1,8 +1,67 @@
-authelia:
+app-template:
+  controller:
+    annotations:
+      reloader.stakater.com/auto: "true"
+    type: statefulset
+  image:
+    repository: ghcr.io/authelia/authelia
+    # TODO Switch to Authelia release tag on next release
+    tag: master@sha256:cc12c2b96ea0af84782ca740ea30d45582c5d801be4633aefc8565ccb4172f87
+  args: ["--config", "/etc/authelia/config.yaml"]
   env:
     TZ: America/Los_Angeles
-
-  # Authelia configuration
+  enableServiceLinks: false
+  service:
+    main:
+      ports:
+        http:
+          port: &port 80
+        metrics:
+          enabled: true
+          port: 8080
+  probes:
+    liveness: &probes
+      enabled: true
+      custom: true
+      spec:
+        httpGet:
+          path: /api/health
+          port: *port
+        initialDelaySeconds: 0
+        periodSeconds: 10
+        timeoutSeconds: 1
+        failureThreshold: 3
+    readiness: *probes
+    startup:
+      enabled: false
+  serviceMonitor:
+    main:
+      enabled: true
+      endpoints:
+        - port: metrics
+          scheme: http
+          path: /metrics
+          interval: 1m
+          scrapeTimeout: 10s
+  ingress:
+    main:
+      enabled: true
+      ingressClassName: nginx
+      annotations:
+        cert-manager.io/cluster-issuer: letsencrypt-prod
+        hajimari.io/enable: "true"
+        hajimari.io/icon: lock
+        hajimari.io/appName: Authelia
+        hajimari.io/info: Authentication and authorization, MFA and SSO
+      hosts:
+        - host: &host auth.toolstowelsandfroods.com
+          paths:
+            - path: /
+              pathType: Prefix
+      tls:
+        - secretName: authelia-tls-certificate
+          hosts:
+          - *host
   domain: auth.toolstowelsandfroods.com
   authentication_backend:
     password_reset:
@@ -41,35 +100,25 @@ authelia:
     external:
       name: authelia-secrets
       key: jwt_secret
-
-  ingress:
-    main:
+  podSecurityContext:
+    runAsUser: 1000
+    runAsGroup: 1000
+    fsGroup: 1000
+    fsGroupChangePolicy: "OnRootMismatch"
+  persistence:
+    config:
       enabled: true
-      ingressClassName: nginx
-      annotations:
-        cert-manager.io/cluster-issuer: letsencrypt-prod
-        hajimari.io/enable: "true"
-        hajimari.io/icon: lock
-        hajimari.io/appName: Authelia
-        hajimari.io/info: Authentication and authorization, MFA and SSO
-      hosts:
-        - host: &host auth.toolstowelsandfroods.com
-          paths:
-            - path: /
-              pathType: Prefix
-      tls:
-        - secretName: authelia-tls-certificate
-          hosts:
-          - *host
-  session:
-    redis:
+      type: configMap
+      name: authelia-config
+      subPath: config.yaml
+      mountPath: /etc/authelia/config.yaml
+      readOnly: false
+    db:
       enabled: true
-      enabledSecret: false
-      host: redis.redis.svc.cluster.local
-      port: 6379
+      existingClaim: authelia
   resources:
     requests:
-      cpu: 5m
-      memory: 10Mi
+      cpu: 10m
+      memory: 250Mi
     limits:
-      memory: 200Mi
+      memory: 1000Mi
