--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -7,8 +7,39 @@ app-template:
     repository: ghcr.io/authelia/authelia
     # TODO Switch to Authelia release tag on next release
     tag: master@sha256:cc12c2b96ea0af84782ca740ea30d45582c5d801be4633aefc8565ccb4172f87
+  args: ["--config", "/config/configuration.yml", "--config.experimental.filters", "expand-env"]
   env:
     TZ: America/Los_Angeles
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_ADDITIONAL_GROUPS_DN: ou=groups
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_ADDITIONAL_USERS_DN: ou=people
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_BASE_DN: dc=toolstowelsandfroods,dc=homearpa
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_DISPLAY_NAME_ATTRIBUTE: displayName
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_GROUPS_FILTER: (member={dn})
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_GROUP_NAME_ATTRIBUTE: cn
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_IMPLEMENTATION: custom
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_MAIL_ATTRIBUTE: mail
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_START_TLS: "false"
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_TIMEOUT: 5s
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_URL: ldap://lldap.lldap.svc.cluster.local:3890
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USER: uid=admin,ou=people,dc=home,dc=arpa
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USERNAME_ATTRIBUTE: uid
+    AUTHELIA_AUTHENTICATION_BACKEND_LDAP_USERS_FILTER: (&({username_attribute}={input})(objectClass=person))
+    AUTHELIA_AUTHENTICATION_BACKEND_PASSWORD_RESET_DISABLE: "true"
+    AUTHELIA_AUTHENTICATION_BACKEND_REFRESH_INTERVAL: 1m
+    AUTHELIA_DEFAULT_REDIRECTION_URL: https://auth.toolstowelsandfroods.com
+    AUTHELIA_DUO_API_DISABLE: "true"
+    AUTHELIA_LOG_LEVEL: info
+    AUTHELIA_SERVER_DISABLE_HEALTHCHECK: "true"
+    AUTHELIA_SERVER_PORT: &port 80
+    AUTHELIA_SESSION_DOMAIN: toolstowelsandfroods.com
+    AUTHELIA_SESSION_NAME: authelia-home-ops
+    AUTHELIA_SESSION_REDIS_DATABASE_INDEX: 14
+    AUTHELIA_SESSION_REDIS_HOST: redis.redis.svc.cluster.local
+    AUTHELIA_TELEMETRY_METRICS_ADDRESS: tcp://0.0.0.0:8080
+    AUTHELIA_TELEMETRY_METRICS_ENABLED: "true"
+    AUTHELIA_THEME: dark
+    AUTHELIA_TOTP_ISSUER: authelia.com
+    AUTHELIA_WEBAUTHN_DISABLE: "true"
   enableServiceLinks: false
   service:
     main:
@@ -62,34 +93,6 @@ app-template:
           hosts:
           - *host
   domain: auth.toolstowelsandfroods.com
-  authentication_backend:
-    password_reset:
-      disable: false
-    refresh_interval: 1m
-    ldap:
-      implementation: custom
-      url: ldap://lldap:3890
-      timeout: 5s
-      start_tls: false
-      base_dn: dc=toolstowelsandfroods,dc=com
-      username_attribute: uid
-      additional_users_dn: ou=people
-      # To allow sign in both with username and email, one can use a filter like
-      # (&(|({username_attribute}={input})({mail_attribute}={input}))(objectClass=person))
-      users_filter: "(&({username_attribute}={input})(objectClass=person))"
-      # Set this to ou=groups, because all groups are stored in this ou
-      additional_groups_dn: ou=groups
-      # Only this filter is supported right now
-      groups_filter: "(member={dn})"
-      # The attribute holding the name of the group.
-      group_name_attribute: cn
-      # Email attribute
-      mail_attribute: mail
-      # The attribute holding the display name of the user. This will be used to greet an authenticated user.
-      display_name_attribute: displayName
-      # The username and password of the admin user.
-      # "admin" should be the admin username you set in the LLDAP configuration
-      user: uid=admin,ou=people,dc=example,dc=com
       password:
         external:
           name: authelia-secrets
@@ -107,9 +110,11 @@ app-template:
   persistence:
     config:
       enabled: true
-      storageClass: longhorn
-      accessMode: ReadWriteMany
-      size: 1Gi
+      type: configMap
+      name: authelia-configmap
+      subPath: configuration.yml
+      mountPath: /config/configuration.yml
+      readOnly: false
     db:
       enabled: true
       existingClaim: authelia
