--- a/authentication/authelia/values.yaml
+++ b/authentication/authelia/values.yaml
@@ -7,7 +7,6 @@ app-template:
     repository: ghcr.io/authelia/authelia
     # TODO Switch to Authelia release tag on next release
     tag: master@sha256:cc12c2b96ea0af84782ca740ea30d45582c5d801be4633aefc8565ccb4172f87
-  args: ["--config", "/config/configuration.yml", "--config.experimental.filters", "expand-env"]
   env:
     TZ: America/Los_Angeles
     AUTHELIA_AUTHENTICATION_BACKEND_LDAP_ADDITIONAL_GROUPS_DN: ou=groups
@@ -110,11 +109,9 @@ app-template:
   persistence:
     config:
       enabled: true
-      type: configMap
-      name: authelia-configmap
-      subPath: configuration.yml
-      mountPath: /config/configuration.yml
-      readOnly: false
+      storageClass: longhorn
+      accessMode: ReadWriteMany
+      size: 1Gi
     db:
       enabled: true
       existingClaim: authelia
