--- a/media/pod-gateway/values.yaml
+++ b/media/pod-gateway/values.yaml
@@ -61,8 +61,8 @@ pod-gateway:
     VPN_BLOCK_OTHER_TRAFFIC: "true"
     VPN_TRAFFIC_PORT: "51820"
     DNS_LOCAL_CIDRS: "local"
-    NOT_ROUTED_TO_GATEWAY_CIDRS: "10.0.0.0/8 172.16.0.0/12 192.168.0.0/16"
-    VPN_LOCAL_CIDRS: "10.0.0.0/8 172.16.0.0/12 192.168.0.0/16"
+    NOT_ROUTED_TO_GATEWAY_CIDRS: "10.0.0.0/8 192.168.0.0/16"
+    VPN_LOCAL_CIDRS: "10.0.0.0/8 192.168.0.0/16"
     IPTABLES_NFT: "yes"
   webhook:
     gatewayDefault: false
