--- a/media/pod-gateway/values.yaml
+++ b/media/pod-gateway/values.yaml
@@ -55,15 +55,13 @@ pod-gateway:
     - media
 
   settings:
-    VPN_INTERFACE: "wg0"
-    VXLAN_ID: "43"
-    VXLAN_IP_NETWORK: "172.16.1"
-    VPN_BLOCK_OTHER_TRAFFIC: "true"
+    NOT_ROUTED_TO_GATEWAY_CIDRS: 10.0.0.0/8 192.168.0.0/16
+    VPN_BLOCK_OTHER_TRAFFIC: true
+    VPN_INTERFACE: wg0
+    VPN_LOCAL_CIDRS: 10.0.0.0/8 192.168.0.0/16
     VPN_TRAFFIC_PORT: "51820"
-    DNS_LOCAL_CIDRS: "local"
-    NOT_ROUTED_TO_GATEWAY_CIDRS: "10.0.0.0/8 192.168.0.0/16"
-    VPN_LOCAL_CIDRS: "10.0.0.0/8 192.168.0.0/16"
-    IPTABLES_NFT: "yes"
+    VXLAN_ID: 43
+    VXLAN_IP_NETWORK: 172.16.1
   webhook:
     gatewayDefault: false
     image:
