--- a/media/pod-gateway/values.yaml
+++ b/media/pod-gateway/values.yaml
@@ -6,39 +6,30 @@ pod-gateway:
   image:
     repository: ghcr.io/angelnu/pod-gateway
     tag: v1.8.1
-
+  DNS: 172.16.1.1
   addons:
     vpn:
       enabled: true
       type: gluetun
       image:
-        repository: docker.io/qmcgaw/gluetun
-        tag: v3.32.0
+        repository: ghcr.io/qdm12/gluetun
+        tag: v3.34.3
       env:
         - name: VPN_SERVICE_PROVIDER
           value: nordvpn
+        - name: VPN_INTERFACE
+          value: wg0
+        - name: FIREWALL
+          value: "off"
+        - name: DOT
+          value: "off"
         - name: SERVER_REGIONS
           value: California
+        - name: LOG_LEVEL
+          value: debug
       envFrom:
         - secretRef:
             name: nordvpn-secrets
-      networkPolicy:
-        enabled: true
-        egress:
-          - ports:
-            - port: 51820
-              protocol: UDP
-            to:
-            - ipBlock:
-                cidr: 0.0.0.0/0
-          - to:
-            - ipBlock:
-                cidr: 10.0.0.0/8
-      securityContext:
-        capabilities:
-          add:
-            - NET_ADMIN
-
     netshoot:
       enabled: true
 
@@ -50,10 +41,6 @@ pod-gateway:
           type: udp
         - port: 57464
           type: tcp
-
-  routed_namespaces:
-    - media
-
   settings:
     NOT_ROUTED_TO_GATEWAY_CIDRS: 10.0.0.0/8 192.168.0.0/16
     VPN_BLOCK_OTHER_TRAFFIC: true
@@ -62,6 +49,9 @@ pod-gateway:
     VPN_TRAFFIC_PORT: "51820"
     VXLAN_ID: 43
     VXLAN_IP_NETWORK: 172.16.1
+
+  routed_namespaces:
+    - media
   webhook:
     gatewayDefault: false
     image:
