--- a/media/pod-gateway/templates/secrets.yaml
+++ b/media/pod-gateway/templates/secrets.yaml
@@ -13,9 +13,9 @@ spec:
     - secretKey: OPENVPN_USER
       remoteRef:
         key: /nordvpn/
-        property: user
+        property: OPENVPN_USER
     - secretKey: OPENVPN_PASSWORD
       remoteRef:
         key: /nordvpn/
-        property: password
+        property: OPENVPN_PASSWORD
 
