--- a/media/pod-gateway/values.yaml
+++ b/media/pod-gateway/values.yaml
@@ -27,16 +27,9 @@ pod-gateway:
           value: California
         - name: LOG_LEVEL
           value: debug
-        - name: OPENVPN_USER
-          valueFrom:
-            secretKeyRef:
-              name: nordvpn-secrets
-              key: OPENVPN_USER
-        - name: OPENVPN_PASSWORD
-          valueFrom:
-            secretKeyRef:
-              name: nordvpn-secrets
-              key: OPENVPN_PASSWORD
+      envFrom:
+        - secretRef:
+            name: nordvpn-secrets
  
     netshoot:
       enabled: true
