--- a/authentication/lldap/templates/secrets.yaml
+++ b/authentication/lldap/templates/secrets.yaml
@@ -11,8 +11,13 @@ spec:
     name: lldap-secret
     creationPolicy: Owner
   data:
-    - secretKey: bind_password
+    - secretKey: LLDAP_JWT_SECRET
       remoteRef:
         key: /ldap/
-        property: bind_password
+        property: LLDAP_JWT_SECRET
+    - secretKey: LLDAP_LDAP_USER_PASS
+      remoteRef:
+        key: /ldap/
+        property: LLDAP_LDAP_USER_PASS
+
 
