--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -15,7 +15,7 @@ spec:
       remoteRef:
         key: /authelia/
         property: jwt_secret
-    - secretKey: bind_password
+    - secretKey: password
       remoteRef:
         key: /ldap/
-        property: bind_password
+        property: LLDAP_LDAP_USER_PASS
