--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -19,3 +19,8 @@ spec:
       remoteRef:
         key: /ldap/
         property: LLDAP_LDAP_USER_PASS
+    - secretKey: encryptionKey
+      remoteRef:
+        key: /authelia/
+        property: encryption_key
+
