--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -23,4 +23,9 @@ spec:
       remoteRef:
         key: /authelia/
         property: encryption_key
+    - secretKey: secret
+      valueFrom:
+        secretKeyRef:
+          name: authelia-secrets
+          key: session_secret
 
