--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -24,7 +24,7 @@ spec:
         key: /authelia/
         property: encryption_key
     - secretKey: secret
-      valueFrom:
+      remoteRef:
         secretKeyRef:
           name: authelia-secrets
           key: session_secret
