--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -25,6 +25,6 @@ spec:
         property: encryption_key
     - secretKey: secret
       remoteRef:
-        name: /authelia/
-        key: session_secret
+        key: /authelia/
+        property: session_secret
 
