--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -11,19 +11,19 @@ spec:
     name: authelia-secrets
     creationPolicy: Owner
   data:
-    - secretKey: jwt_secret
+    - secretKey: JWT_SECRET
       remoteRef:
         key: /authelia/
         property: jwt_secret
     - secretKey: password
-      remoteRef:
+      remoteRef: AUTHENTICATION_BACKEND_LDAP_PASSWORD
         key: /ldap/
         property: LLDAP_LDAP_USER_PASS
-    - secretKey: encryptionKey
+    - secretKey: STORAGE_ENCRYPTION_KEY
       remoteRef:
         key: /authelia/
         property: encryption_key
-    - secretKey: secret
+    - secretKey: SESSION_SECRET
       remoteRef:
         key: /authelia/
         property: session_secret
