--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -15,8 +15,8 @@ spec:
       remoteRef:
         key: /authelia/
         property: jwt_secret
-    - secretKey: password
-      remoteRef: AUTHENTICATION_BACKEND_LDAP_PASSWORD
+    - secretKey: AUTHENTICATION_BACKEND_LDAP_PASSWORD
+      remoteRef:
         key: /ldap/
         property: LLDAP_LDAP_USER_PASS
     - secretKey: STORAGE_ENCRYPTION_KEY
