--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -11,7 +11,7 @@ spec:
     name: authelia-secrets
     creationPolicy: Owner
   data:
-    - secretKey: jwt_secret
+    - secretKey: AUTHELIA_JWT_SECRET
       remoteRef:
         key: /authelia/
         property: jwt_secret
