--- a/authentication/authelia/templates/secrets.yaml
+++ b/authentication/authelia/templates/secrets.yaml
@@ -15,15 +15,15 @@ spec:
       remoteRef:
         key: /authelia/
         property: jwt_secret
-    - secretKey: AUTHENTICATION_BACKEND_LDAP_PASSWORD
+    - secretKey: AUTHELIA_AUTHENTICATION_BACKEND_LDAP_PASSWORD
       remoteRef:
         key: /ldap/
         property: LLDAP_LDAP_USER_PASS
-    - secretKey: STORAGE_ENCRYPTION_KEY
+    - secretKey: AUTHELIA_STORAGE_ENCRYPTION_KEY
       remoteRef:
         key: /authelia/
         property: encryption_key
-    - secretKey: SESSION_SECRET
+    - secretKey: AUTHELIA_SESSION_SECRET
       remoteRef:
         key: /authelia/
         property: session_secret
