--- a/authentication/authelia/templates/configmap.yaml
+++ b/authentication/authelia/templates/configmap.yaml
@@ -33,7 +33,9 @@ data:
         - name: internal
           networks: ["10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16"]
     session:
-      name: authelia_session
+      cookies:
+        secure: true
+        http_only: true
       redis:
         host: redis.redis.svc.cluster.local
         port: 26379
